--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "bulma": "^0.9.0",
     "core-js": "^3.6.5",
+    "dotenv": "^8.2.0",
     "firebase": "^7.15.0",
     "moment": "^2.26.0",
     "vue": "^2.6.11",
