--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wm_chat",
   "description": "Chat created with VUE, and Firebase. Stored data on Firebase - Cloud Firestore",
-  "version": "0.1.5-alpha",
+  "version": "0.2.0-alpha",
   "private": true,
   "repository": {
     "type": "git",
@@ -29,13 +29,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "bulma": "^0.9.0",
     "core-js": "^3.6.5",
     "firebase": "^7.15.0",
     "moment": "^2.26.0",
+    "tiptap": "^1.27.1",
     "vue": "^2.6.11",
     "vue-chat-scroll": "^1.4.0",
-    "vue-material-design-icons": "^4.7.1",
     "vue-router": "^3.2.0",
     "vue-sanitize": "^0.2.0"
   },
